Prevent footer from being too close to page header
This first attempt at Issue #4 follows the example given here:

    https://getbootstrap.com/examples/sticky-footer/

This isn't quite working right, but it's a start. The current problem is
that the footer's height ought to vary depending on the width of the
viewport; so the "magic number" of 180px in the CSS for the footer's
height sometimes looks too big and other times looks too small.

--- a/css/design.scss
+++ b/css/design.scss
@@ -85,10 +85,24 @@ header {
   vertical-align: middle;
 }
 
+html {
+  min-width: 320px;
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 180px;
+}
+
 footer {
+  position: absolute;
   border-top: 2px solid rgb(204, 0, 0);
   font-size: 65%;
   margin-bottom: 1rem;
+  bottom: 0;
+  width: 100%;
+  height: 180px;
 }
 
 footer img {
@@ -103,8 +117,4 @@ footer p {
 footer div {
   margin-top: .5rem;
   margin-bottom: .5rem;
-}
-
-html {
-  min-width: 320px;
 }
